getHomeworksToCheck updated with time zone